--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,3 @@
-.col-md-6 {
-    height: 100%;
-    position: relative;
-}
-
 .well {
     max-width: 100%;
     max-height: 100%;
@@ -38,6 +33,8 @@
     border: 1px solid #ebebeb;
     border-radius: 10px;
     padding: 0;
+    margin: 5px;
+    width: 15.81%;
 }
 
 .timer h1 {
